@@ -585,11 +585,13 @@
     </version>
   </module>
   <module name="firestarter">
-    <version release="gnome-2.0-extras">
-      <component name="firestarter" dir="gnome-i18n">
-	<podir dir="extra-po/firestarter"/>
+    <version release="gnome-2.1-extras">
+      <component name="firestarter" dir="firestarter">
+	<podir dir="po/"/>
 	<potname name="firestarter.pot"/>
 	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
       </component>
     </version>
   </module>
