@@ -1,3 +1,8 @@
+2002-02-14  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Firestarter is now in GNOME cvs,
+	reflect this.
+
 2003-02-13  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: procman has been branched. Reflect
